<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_myfridge"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/my_fridge" />

    <item
        android:id="@+id/navigation_grocerylist"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/grocery_list" />

    <item
        android:id="@+id/navigation_recipes"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/recipes" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/settings" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/chat" />

</menu>